# gyper

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindSeqAn.cmake
cmake/seqan/: CMakeLists.txt
data/haplotypes/hla/available_alleles/1000genomes/: HLAA  HLAB  HLAC
data/haplotypes/hla/available_alleles/icelandic_alleles/: DQA1  DQB1  DRB1  HLAA  HLAB  HLAC
data/haplotypes/hla/references/DQA1/: 5p.fa  e1.fa  e2.fa  e3.fa  e4.fa  i1.fa  i2.fa  i3.fa  p3.fa
data/haplotypes/hla/references/DQB1/: 5p.fa  e1.fa  e2.fa  e3.fa  e4.fa  e5.fa  e6.fa  i1.fa  i2.fa  i3.fa  i4.fa  i5.fa  p3.fa
data/haplotypes/hla/references/DRB1/: 5p.fa  e1.fa  e2.fa  e3.fa  e4.fa  e5.fa  e6.fa  i3.fa  i4.fa  i5.fa  p3.fa
data/haplotypes/hla/references/HLAA/: 5p.fa  e1.fa  e2.fa  e3.fa  e4.fa  e5.fa  e6.fa  e7.fa  e8.fa  i1.fa  i2.fa  i3.fa  i4.fa  i5.fa  i6.fa  i7.fa  p3.fa
data/haplotypes/hla/references/HLAB/: 5p.fa  e1.fa  e2.fa  e3.fa  e4.fa  e5.fa  e6.fa  e7.fa  i1.fa  i2.fa  i3.fa  i4.fa  i5.fa  i6.fa  p3.fa
data/haplotypes/hla/references/HLAC/: 5p.fa  e1.fa  e2.fa  e3.fa  e4.fa  e5.fa  e6.fa  e7.fa  e8.fa  i1.fa  i2.fa  i3.fa  i4.fa  i5.fa  i6.fa  i7.fa  p3.fa
data/haplotypes/hla/region/: DQA1  DQB1  DRB1  HLAA  HLAB  HLAC
data/haplotypes/hla/region1k/: DQA1  DQB1  DRB1  HLAA  HLAB  HLAC
docs/: Doxyfile.in
include/gyper/: constructor.hpp  fasta_region.hpp  graph.hpp  graph_align.hpp  graph_builder.hpp  graph_creation.hpp  graph_io.hpp  graph_kmerify.hpp  indexer.hpp  kmer_label.hpp  options.hpp  utilities.hpp  vertex_label.hpp
src/: CMakeLists.txt  constants.hpp.in  constructor.cpp  fasta_region.cpp  graph.cpp  graph.hpp  graph_align.cpp  graph_align.hpp  graph_builder.cpp  graph_builder.hpp  graph_creation.cpp  graph_creation.hpp  graph_io.cpp  graph_io.hpp  graph_kmerify.cpp  graph_kmerify.hpp  gyper_indexer.hpp  gyper_options.cpp  gyper_options.hpp  indexer.cpp  main.cpp  options.cpp  partial_order_graph.cpp  partial_order_graph.hpp  version.h.in
test/: CMakeLists.txt  base.vcf  test_graph_align.cpp  test_graph_builder.cpp  test_graph_hla.cpp  test_graph_kmer.cpp  test_graph_oo.cpp  test_gyper_constructor.cpp  test_gyper_indexer.cpp  test_rocksdb.cpp  test_seqanhts.cpp  test_utilities.cpp
test/alignments/: test_case1.fa  test_case2.fa  test_case4_e1.fa  test_case4_e2.fa  test_case4_e3.fa  test_case4_i2.fa  test_case4_p5.fa  test_case5_e3.fa  test_case5_i2.fa  test_case6.fa  test_case6_i2.fa
test/catch/: CMakeLists.txt
test/reference/: example.vcf  index.vcf  index_test.fa  index_test.fa.fai  indexz.vcf.gz.tbi  reference.fa  reference.fa.fai  test.bam
utilities/cmake_modules/: Findsnappy.cmake
utilities/seqan/: CMakeLists.txt
